<resources>
    <string name="anon_dialog_msg">You are playing as anonymous</string>
    <string name="answer_dialog_positive">Continue</string>
    <string name="answer_dialog_negative">Main menu</string>
    <string name="cancel">Cancel</string>
    <string name="correct">Nice!</string>
    <string name="incorrect">Wrong...</string>
    <string name="app_name">Quiz</string>
    <string name="question">Question</string>
    <string name="anonymous">Anonymous</string>
    <string name="incorrect_name">Name not valid</string>
    <string name="no_photo">Please, take a photo</string>
    <string name="new_profile_selected">New profile selected:</string>
    <string name="name_already_exists">There is already a profile with this name</string>
    <string name="edit">Edit</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="new_profile">New profile</string>
    <string name="last_game">Last game: </string>
    <string name="profile_updated">Profile updated</string>
    <string name="time">Time</string>
    <string name="topic0_q000">Where is Oslo?</string>
    <string name="topic0_q001">What city is this?</string>
    <string name="topic0_q002">Where is the Trevi Fountain?</string>
    <string name="topic0_q003">Which picture is Tokyo?</string>
    <string name="topic0_q004">What is the capital of the USA?</string>
    <string name="topic0_q005">Where was famous singer Céline Dion born?</string>
    <string name="topic0_q006">What city is this?</string>
    <string name="topic0_q007">Which picture is Paris?</string>
    <string name="topic0_q008">What is the capital of Australia?</string>
    <string name="topic0_q009">Where was singer Freddie Mercury born?</string>
    <string name="topic0_q010">Which is the capital of Hungary?</string>
    <string name="topic0_q011">Which of these is not in Italy?</string>
    <string name="topic0_q012">Where did the Olympic Games take place in 2008?</string>
    <string name="topic0_q013">Where did the Titanic sail from?</string>
    <string name="topic0_q014">Which picture is Cairo?</string>
    <string name="topic0_ans000_1">Finland</string>
    <string name="topic0_ans000_2">Iceland</string>
    <string name="topic0_ans000_3">Norway</string>
    <string name="topic0_ans000_4">Sweden</string>
    <string name="topic0_ans001_1">Barcelona</string>
    <string name="topic0_ans001_2">Paris</string>
    <string name="topic0_ans001_3">Tel Aviv</string>
    <string name="topic0_ans001_4">Berlin</string>
    <string name="topic0_ans002_1">Paris</string>
    <string name="topic0_ans002_2">Rome</string>
    <string name="topic0_ans002_3">Athens</string>
    <string name="topic0_ans002_4">Valletta</string>
    <string name="topic0_ans003_1" translatable="false">seoul</string>
    <string name="topic0_ans003_2" translatable="false">india</string>
    <string name="topic0_ans003_3" translatable="false">sydney</string>
    <string name="topic0_ans003_4" translatable="false">tokyo</string>
    <string name="topic0_ans004_1">Washington DC</string>
    <string name="topic0_ans004_2">New York</string>
    <string name="topic0_ans004_3">Houston</string>
    <string name="topic0_ans004_4">Los Angeles</string>
    <string name="topic0_ans005_1">Vancouver</string>
    <string name="topic0_ans005_2">Montreal</string>
    <string name="topic0_ans005_3">Toronto</string>
    <string name="topic0_ans005_4">Quebec</string>
    <string name="topic0_ans006_1">Paris</string>
    <string name="topic0_ans006_2">London</string>
    <string name="topic0_ans006_3">Dublin</string>
    <string name="topic0_ans006_4">Leeds</string>
    <string name="topic0_ans007_1" translatable="false">paris</string>
    <string name="topic0_ans007_2" translatable="false">seoul</string>
    <string name="topic0_ans007_3" translatable="false">newyork</string>
    <string name="topic0_ans007_4" translatable="false">abudabi</string>
    <string name="topic0_ans008_1">Sydney</string>
    <string name="topic0_ans008_2">Canberra</string>
    <string name="topic0_ans008_3">Melbourne</string>
    <string name="topic0_ans008_4">Wellington</string>
    <string name="topic0_ans009_1">Stone Town</string>
    <string name="topic0_ans009_2">London</string>
    <string name="topic0_ans009_3">California</string>
    <string name="topic0_ans009_4">Budapest</string>
    <string name="topic0_ans010_1" translatable="false">india</string>
    <string name="topic0_ans010_2" translatable="false">morocco</string>
    <string name="topic0_ans010_3" translatable="false">budapest</string>
    <string name="topic0_ans010_4" translatable="false">kiev</string>
    <string name="topic0_ans011_1" translatable="false">rome</string>
    <string name="topic0_ans011_2" translatable="false">paris</string>
    <string name="topic0_ans011_3" translatable="false">florence</string>
    <string name="topic0_ans011_4" translatable="false">venice</string>
    <string name="topic0_ans012_1">Rio de Janeiro</string>
    <string name="topic0_ans012_2">Barcelona</string>
    <string name="topic0_ans012_3">Athens</string>
    <string name="topic0_ans012_4">Beijing</string>
    <string name="topic0_ans013_1">Istanbul</string>
    <string name="topic0_ans013_2">Lisbon</string>
    <string name="topic0_ans013_3">Southampton</string>
    <string name="topic0_ans013_4">Alexandria</string>
    <string name="topic0_ans014_1" translatable="false">dubai</string>
    <string name="topic0_ans014_2" translatable="false">morocco</string>
    <string name="topic0_ans014_3" translatable="false">kiev</string>
    <string name="topic0_ans014_4" translatable="false">cairo</string>
    <string name="topic1_q000">What\'s the name of Portal\'s protagonist?</string>
    <string name="topic1_q001">Which of these games was made by Nintendo?</string>
    <string name="topic1_q002">Who is the director of Metal Gear Solid?</string>
    <string name="topic1_q003">Which of these characters belongs to Sega?</string>
    <string name="topic1_q004">What game is this character from?</string>
    <string name="topic1_q005">What game is this scene from?</string>
    <string name="topic1_q006">What game is this scene from?</string>
    <string name="topic1_q007">What game is this song from?</string>
    <string name="topic1_q008">What picture matches the song?</string>
    <string name="topic1_q009">Who composed this song?</string>
    <string name="topic1_q010">What is not a campaign in Age of Empires II?</string>
    <string name="topic1_q011">What sounds?</string>
    <string name="topic1_q012">In what saga are there zombies?</string>
    <string name="topic1_q013">Which animal is Sonic?</string>
    <string name="topic1_q014">Which Assasin\'s Creed is this?</string>
    <string name="topic1_q015">Which character is this?</string>
    <string name="topic1_q016">What kind is this character?</string>
    <string name="topic1_q017">What game is this song?</string>
    <string name="topic1_q018">Wha\'s the name of this game?</string>
    <string name="topic1_q019">In what game can you teleport?</string>
    <string name="topic1_ans000_1" translatable="false">Caroline</string>
    <string name="topic1_ans000_2" translatable="false">Elise</string>
    <string name="topic1_ans000_3" translatable="false">Chell</string>
    <string name="topic1_ans000_4" translatable="false">Eve</string>
    <string name="topic1_ans001_1" translatable="false">Super Mario Galaxy</string>
    <string name="topic1_ans001_2" translatable="false">Firewatch</string>
    <string name="topic1_ans001_3" translatable="false">FIFA</string>
    <string name="topic1_ans001_4" translatable="false">Half-Life</string>
    <string name="topic1_ans002_1" translatable="false">Shigeru Miyamoto</string>
    <string name="topic1_ans002_2" translatable="false">Hideo Kojima</string>
    <string name="topic1_ans002_3" translatable="false">Satoru Iwata</string>
    <string name="topic1_ans002_4" translatable="false">Masahiro Sakurai</string>
    <string name="topic1_ans003_1" translatable="false">chloe</string>
    <string name="topic1_ans003_2" translatable="false">shepard</string>
    <string name="topic1_ans003_3" translatable="false">mario</string>
    <string name="topic1_ans003_4" translatable="false">sonic</string>
    <string name="topic1_ans004_1" translatable="false">The Wolf Among Us</string>
    <string name="topic1_ans004_2" translatable="false">The Walking Dead</string>
    <string name="topic1_ans004_3" translatable="false">Life is Strange</string>
    <string name="topic1_ans004_4" translatable="false">Gone Home</string>
    <string name="topic1_ans005_1" translatable="false">Super Mario 64</string>
    <string name="topic1_ans005_2" translatable="false">Super Mario Odyssey</string>
    <string name="topic1_ans005_3" translatable="false">Super Mario Sunshine</string>
    <string name="topic1_ans005_4" translatable="false">Super Mario Galaxy</string>
    <string name="topic1_ans006_1" translatable="false">The Lion\'s Song</string>
    <string name="topic1_ans006_2" translatable="false">Braid</string>
    <string name="topic1_ans006_3" translatable="false">Pony Island</string>
    <string name="topic1_ans006_4" translatable="false">The Witness</string>
    <string name="topic1_ans007_1" translatable="false">Super Smash Bros Brawl</string>
    <string name="topic1_ans007_2" translatable="false">Mario Kart Wii</string>
    <string name="topic1_ans007_3" translatable="false">Street Fighter</string>
    <string name="topic1_ans007_4" translatable="false">Final Fantasy VII</string>
    <string name="topic1_ans008_1" translatable="false">mario</string>
    <string name="topic1_ans008_2" translatable="false">layton</string>
    <string name="topic1_ans008_3" translatable="false">sonic</string>
    <string name="topic1_ans008_4" translatable="false">chloe</string>
    <string name="topic1_ans009_1" translatable="false">Mahito Yokota</string>
    <string name="topic1_ans009_2" translatable="false">Koji Kondo</string>
    <string name="topic1_ans009_3" translatable="false">Shiho Fujii</string>
    <string name="topic1_ans009_4" translatable="false">Asuka Ota</string>
    <string name="topic1_ans010_1" translatable="false">Gengis Khan</string>
    <string name="topic1_ans010_2" translatable="false">Saladino</string>
    <string name="topic1_ans010_3" translatable="false">Blackbeard</string>
    <string name="topic1_ans010_4" translatable="false">Juana de Arco</string>
    <string name="topic1_ans011_1" translatable="false">Monk</string>
    <string name="topic1_ans011_2" translatable="false">Animal</string>
    <string name="topic1_ans011_3" translatable="false">Machine</string>
    <string name="topic1_ans011_4" translatable="false">Ship</string>
    <string name="topic1_ans012_1" translatable="false">Pokemon</string>
    <string name="topic1_ans012_2" translatable="false">GTA</string>
    <string name="topic1_ans012_3" translatable="false">Warfare</string>
    <string name="topic1_ans012_4" translatable="false">Black Ops</string>
    <string name="topic1_ans013_1" translatable="true">Fox</string>
    <string name="topic1_ans013_2" translatable="true">Hedgehog</string>
    <string name="topic1_ans013_3" translatable="true">Rabbit</string>
    <string name="topic1_ans013_4" translatable="true">Tortoise</string>
    <string name="topic1_ans014_1" translatable="false">Black Flag</string>
    <string name="topic1_ans014_2" translatable="false">Origins</string>
    <string name="topic1_ans014_3" translatable="false">II</string>
    <string name="topic1_ans014_4" translatable="false">Unity</string>
    <string name="text_start_button">Start Quiz</string>
    <string name="text_settings_button">Settings</string>
    <string name="text_scores_button">Records</string>
    <string name="name_title">Player</string>
    <string name="score_title">Score</string>
    <string name="text_profiles_button">Profiles</string>
</resources>