<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoresActivity">


    <TableLayout
        android:layout_width="340dp"
        android:layout_height="369dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name_title"
                android:layout_width="71dp"
                android:layout_height="50dp"
                android:text="@string/name_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/score_title"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/score_title"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="308dp"
                tools:layout_editor_absoluteY="125dp" />

            <TextView
                android:id="@+id/time_title"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/time"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="308dp"
                tools:layout_editor_absoluteY="125dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="59dp">

            <TextView
                android:id="@+id/name_0"
                android:layout_width="140dp"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/score_0"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/time_0"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:textAlignment="textEnd" />
        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>